# kafka-avro-streaming

./: .gitignore  Dockerfile.dashboard  README.md  RELANCER.md  consumer.py  docker-compose.yml  main.py  producer.py  pyproject.toml  user_event_v1.avsc  user_event_v2.avsc
dashboard/: app.py
