[project]
name = "kafka-avro-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "confluent-kafka[schema-registry]>=2.13.0",
    "fastavro>=1.12.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]
