[project]
name = "kafka-avro-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "confluent-kafka[schema-registry]>=2.13.0",
    "fastavro>=1.12.1",
    "httpx>=0.28.1",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
